[package]
name = "rustylinez"
version = "0.2.2"
edition = "2015"
authors = ["Katsu Kawakami <kkawa1570@gmail.com>, Dhole <dhole@openmailbox>"]
description = "Rustyline, a readline implementation based on Antirez's Linenoise"
repository = "https://github.com/Dhole/rustylinez"
readme = "README.md"
keywords = ["readline"]
license = "MIT"

[dependencies]
libc = "0.2.7"
nix = "0.5.0"
unicode-width = "0.1.3"
clippy = { version = "~0.0.58", optional = true }

[dev-dependencies]
tempdir = "0.3.4"
